[package]

name = "kwarg_macros"
version = "0.0.0"
license = "LGPL-3.0"
repository = "https://github.com/SiegeLord/KWarg"
keywords = ["kwargs", "plugin"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Keyword argument plugin"

[lib]

name = "kwarg_macros"
path = "src/lib.rs"
plugin = true

[[test]]

name = "test"
path = "src/test.rs"
